deploy/k8s/integration/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: integration-staging
  labels:
    app.kubernetes.io/part-of: qooma
    env: staging
