deploy/k8s/integration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-api
  namespace: integration-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - integration-staging.sharedisini.com
      secretName: integration-staging-tls
  rules:
    - host: integration-staging.sharedisini.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: integration-api
                port:
                  number: 80
